# cs_web_proj_api_v2

./: README.md  manage.py  pyproject.toml  requirements.txt
api/: urls.py  views.py
api/helpers/: Movie.py  Person.py  Theater.py  simulator.py
cs_web_v2/: asgi.py  settings.py  urls.py  wsgi.py
