[tool.poetry]
name = "cs_web_v2"
version = "0.1.0"
description = ""
authors = ["alvaro <alvarodevcode@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.6"
Faker = "^13.15.0"
numpy = "^1.23.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
